RESOLVED FIXED76729
JIT compilation should not require ExecState
https://bugs.webkit.org/show_bug.cgi?id=76729
Summary JIT compilation should not require ExecState
Filip Pizlo
Reported 2012-01-20 12:49:25 PST
Patch forthcoming.
Attachments
the patch (9.04 KB, patch)
2012-01-20 12:59 PST, Filip Pizlo
barraclough: review+
Filip Pizlo
Comment 1 2012-01-20 12:49:51 PST
Filip Pizlo
Comment 2 2012-01-20 12:59:39 PST
Created attachment 123364 [details] the patch
Filip Pizlo
Comment 3 2012-01-21 16:52:25 PST
Note You need to log in before you can comment on or make changes to this bug.