JIT compilation should not require ExecState https://bugs.webkit.org/show_bug.cgi?id=76729 <rdar://problem/10731545>

Reviewed by Gavin Barraclough.

Changed the relevant JIT driver functions to take JSGlobalData& instead of
ExecState*, since really they just needed the global data.

* dfg/DFGDriver.cpp:
(JSC::DFG::compile):
(JSC::DFG::tryCompile):
(JSC::DFG::tryCompileFunction):
* dfg/DFGDriver.h:
(JSC::DFG::tryCompile):
(JSC::DFG::tryCompileFunction):
* jit/JITDriver.h:
(JSC::jitCompileIfAppropriate):
(JSC::jitCompileFunctionIfAppropriate):
* runtime/Executable.cpp:
(JSC::EvalExecutable::compileInternal):
(JSC::ProgramExecutable::compileInternal):
(JSC::FunctionExecutable::compileForCallInternal):
(JSC::FunctionExecutable::compileForConstructInternal):



Canonical link: https://commits.webkit.org/93615@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105579 268f45cc-cd09-0410-ab3c-d52691b4dbfc