Source/JavaScriptCore/dfg/DFGDriver.h
@@ -30,19 +30,19 @@
 
 namespace JSC {
 
-class ExecState;
 class CodeBlock;
 class JITCode;
+class JSGlobalData;
 class MacroAssemblerCodePtr;
 
 namespace DFG {
 
 #if ENABLE(DFG_JIT)
-bool tryCompile(ExecState*, CodeBlock*, JITCode&);
-bool tryCompileFunction(ExecState*, CodeBlock*, JITCode&, MacroAssemblerCodePtr& jitCodeWithArityCheck);
+bool tryCompile(JSGlobalData&, CodeBlock*, JITCode&);
+bool tryCompileFunction(JSGlobalData&, CodeBlock*, JITCode&, MacroAssemblerCodePtr& jitCodeWithArityCheck);
 #else
-inline bool tryCompile(ExecState*, CodeBlock*, JITCode&) { return false; }
-inline bool tryCompileFunction(ExecState*, CodeBlock*, JITCode&, MacroAssemblerCodePtr&) { return false; }
+inline bool tryCompile(JSGlobalData&, CodeBlock*, JITCode&) { return false; }
+inline bool tryCompileFunction(JSGlobalData&, CodeBlock*, JITCode&, MacroAssemblerCodePtr&) { return false; }
 #endif
 
 } } // namespace JSC::DFG
